# otter

./: .env.example  .gitignore  DESIGN.md  README.md  bindings.json  entry-points.json  graph.py  langgraph.json  main.py  otter.mermaid  project.uiproj  pyproject.toml  schemas.py  uipath.json
.agent/: SDK_REFERENCE.md
agents/: README.md  dependency_agent.md  diagnosis_agent.md  drift_detector_agent.md  eval_agent.md  log_analyzer_agent.md  metrics_agent.md  model_identity_monitor.md  recovery_evaluator.md  routing_decision_agent.md  vendor_status_agent.md
demo/: Otter-Submission-Deck.pptx
demo/voiceover/: script.txt
docs/: README.md  canary-kill-switch.md  cost-aware-routing.md  eval-drift-baseline.md  flow-questions.md  gpt5-1.txt  lifecycle.md  model-identity.md  policy-gate.md  schemas.md
evidence/: README.md  git-log-full.txt
scripts/: regenerate_entry_points.py
